estilo.css
body {
  position: relative;
  margin: 0;
  padding: 0;
  font-family: "Open Sans", sans-serif;
}

.navbar {
  background-color: #2E085f;
  padding: 0 60px;
  position: fixed;
  width: 100%;
  height: 80px;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 2000;
}

.logo img {
  max-height: 50px;
}

.nav-links {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 30px;
  margin: 0;
  padding: 0;
  white-space: nowrap;
  margin-right: 150px;


}

.navbar a {
  color: white;
  text-decoration: none;
  font-weight: bold;
  font-size: 18px;
  transition: color 0.3s ease;
  font-family: "Montserrat";
  font-weight: 400;
}

.navbar a:hover {
  color: #DCB1FD;
}

.menu-icon {
  display: none;
  font-size: 30px;
  color: white;
  cursor: pointer;
}

#inicio {
  background-color: #000000;
  height: 100vh;
  position: relative;
  padding: 80px;

}

.titulo h1 {
  font-size: 42px;
  color: #fff;
  font-weight: 700;
  margin-bottom: 20px;
  font-family: "Montserrat";
  letter-spacing: 2px;
  text-align: left;
  margin-bottom: 40px; 
  margin-top: 80px; 
}

.subtitulo h2 {
  font-family: "Open Sans";
  color: aliceblue;
  margin-bottom: 20px;
  font-size: 22px;
  text-align: left;
  max-width: 600px;
  font-weight: 400;
  margin-top: 20px;

}

.marca {
  color: #DCB1FD;
  font-weight: 700;
  font-style: italic;
}

.imagem {
  position: absolute;
  top: 80px;
  right: 20px;
  z-index: 1000;
}

.imagem img {
  max-width: 500px;
}

.botao button {
  background-color: #DCB1FD;
  color: #000;
  padding: 16px 40px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 30px;
  font-size: 18px;
  transition: background-color 0.3s ease;
}

.botao button:hover {
  background-color: #2E0854;
}

@media (max-width: 768px) {
  .menu-icon {
    display: block;
  }

  .nav-links {
    display: none !important; 
    flex-direction: column;
    position: absolute;
    top: 80px;
    right: 0;
    background-color: #2E085F;
    width: 100%;
    padding: 20px 0;
  }
  
  .nav-links.active {
    display: flex !important; 
  }
  
  .nav-links li {
    margin: 10px 0;
    text-align: center;
  }


  .imagem img {
    max-width: 300px;
  }
}

/* Estilo para a seção de benefícios */

section#beneficios {
  background-color: #000000;
  padding: 40px;
  position: relative;
  width: 100%;
  height: 100vh;
}

section#beneficios div{
  display: block;
  background-color: #000000;
  padding: 40px;
  text-align: center;
  box-sizing: border-box;
}

section#beneficios h2 {
  font-size: 36px;
  color: #FFFFFF;
  font-weight: 700;
  margin: 20px 0px 40px 100px;
  font-family: "Montserrat";
  text-align: left;
}

section#beneficios div#lista-beneficios {
  display: flex;
  list-style: none;
  padding: 0;
  text-align: left;
}

section#beneficios div#lista-beneficios svg {
  margin: 0px 12px 20px 0px;
  vertical-align: middle;
}

section#beneficios div#lista-beneficios li {
  display: flex;
  font-size: 18px;
  color: #FFFFFF;
  margin-bottom: 20px;
  font-family: "Montserrat";
  line-height: 1.6;
}

